--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 streamlit
 numpy
 pandas
@@ -6,12 +5,4 @@ scipy
 matplotlib
 seaborn
 joblib
-=======
-streamlit
-numpy
-pandas
-scipy
-matplotlib
-seaborn
-joblib
->>>>>>> 971327e (Add streamlit app and model files for dropout prediction)
+scikit-learn
